--- a/student-store-express-api/package.json
+++ b/student-store-express-api/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "main": "server.js",
   "scripts": {
+    "dev": "nodemon server.js --ignore data",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
